# flexelog

./: .coveragerc  .env  .gitignore  LICENSE.md  README.md  db.sqlite3  flexelog.db  flexelog_setup.py  flexlog_setup.py  manage.py  psiport.db  pyproject.toml  test.db
common_files/locale/de/LC_MESSAGES/: django.po
demo/demo/: demo.db
docs/: mkdocs.yml
docs/docs/: index.md  translation.md
docs/site/: index.html
flexelog/: __init__.py  admin.py  apps.py  attachments.py  elcode.py  elog_cfg.py  encodings.py  forms.py  models.py  script_util.py  subst.py  tests.py  urls.py  views.py
flexelog/editor/: widgets_toastui.py
flexelog/fixtures/: test_auth_stargate.json  test_stargate.json
flexelog/locale/bg/LC_MESSAGES/: django.mo  django.po
flexelog/locale/br/LC_MESSAGES/: django.mo  django.po
flexelog/locale/cz/LC_MESSAGES/: django.mo  django.po
flexelog/locale/de/LC_MESSAGES/: django.mo  django.po
flexelog/locale/dk/LC_MESSAGES/: django.mo  django.po
flexelog/locale/es/LC_MESSAGES/: django.mo  django.po
flexelog/locale/fr/LC_MESSAGES/: django.mo  django.po
flexelog/locale/id/LC_MESSAGES/: django.mo  django.po
flexelog/locale/it/LC_MESSAGES/: django.mo  django.po
flexelog/locale/jp/LC_MESSAGES/: django.mo  django.po
flexelog/locale/nl/LC_MESSAGES/: django.mo  django.po
flexelog/locale/pl/LC_MESSAGES/: django.mo  django.po
flexelog/locale/ru/LC_MESSAGES/: django.mo  django.po
flexelog/locale/se/LC_MESSAGES/: django.mo  django.po
flexelog/locale/sk/LC_MESSAGES/: django.mo  django.po
flexelog/locale/tr/LC_MESSAGES/: django.mo  django.po
flexelog/locale/zh/LC_MESSAGES/: django.po
flexelog/locale/zh_CN/LC_MESSAGES/: django.mo  django.po
flexelog/management/commands/: old_flexelog_migrate.py  psi_elog_migrate.py  psi_translations.py
flexelog/node/: index-markdown-editing-left-minimal-render-right.html  index.html  package-lock.json  package.json
flexelog/node/src/: main-markdown-left-render-right.js  main.js
flexelog/psi_elog/: eloglang_to_utf.py  psi_elogs.py  psi_entry.py
flexelog/psi_elog/lang/: brazilian.eloglang  bulgarian.eloglang  chinese.eloglang  czech.eloglang  danish.eloglang  dutch.eloglang  french.eloglang  german.eloglang  indonesia.eloglang  italian.eloglang  japanese.eloglang  polish.eloglang  russian.eloglang  slovak.eloglang  spanish.eloglang  swedish.eloglang  turkish.eloglang
flexelog/static/flexelog/: flexelog.css  toastui-local.js
flexelog/templates/flexelog/: base.html  confirmation.html  detail.html  do_logout.html  edit.html  entry_detail.html  entry_list.html  index.html  search_form.html  show_error.html  xxxtest.html
flexelog/templates/flexelog/editor/: editor-toastui.html  viewer-toastui.html
flexelog/templates/flexelog/include/: attachments.html  commands.html  editor_tui.html  entry_list_core.html  filter_attrs.html  lb_tabs.html  list_display_header.html  list_modes.html  pagination.html
flexelog/templates/registration/: login.html
flexelog/templatetags/: flex.py
flexelog/tests/: stargate.json  test_auth.py  test_config.py  test_encodings.py  test_responses.py
flexelog/tests/test_data/psi_elog_config/: conditionals.cfg
flexsite/: asgi.py  base_settings.py  settings.py  settings_local.py  settings_local_template.py  settings_local_template.txt  urls.py  wsgi.py
media/attachments/Physics/2025/: 250605_171803_attach3junk.txt
media/attachments/flexelog_entry/27/: test.md
