

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "flexelog"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.10"
dynamic = ["version", "description"]

authors = [
    {name = "Darcy Mason", email = "darcymason@gmail.com"},
]

# see https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Other Audience",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",    
    "Programming Language :: Python :: 3 :: Only",
    "Framework :: Django :: 5",
    "License :: OSI Approved :: GNU General Public License (GPL)",
]

dependencies = [
    "django >=5.1,<6.0",
    "htmlobj",
]

[project.urls]
Source = "https://github.com/darcymason/flexelog"

# [project.scripts]
# script_name = "flexelog:function"

[project.optional-dependencies]
dev = [
    "black",
    "flit",
    "pre-commit",
    "ruff",
]
docs = [
    "mkdocs",
    "mkdocstrings[python]",
]
test = [
]

[tool.black]
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/.git
^/.tox
^/.venv
^/.build
^/.dist
'''


[tool.ruff]
# see https://github.com/charliermarsh/ruff
select = ["ALL"]
ignore = [
    # ignored for now, should be activated in the future
    # docstrings
    "D",
    # flake8-annotations
    "ANN",
    # flake8-type-checking
    "TCH",

    # ignored, "black" will handle this
    # flake8-commas
    "COM",

    # ignored, due to Windows / WSL2 setup
    # flake8-executable
    "EXE",
]
fixable = ["I"]
fix = true
line-length=88
target-version = "py312"

[tool.ruff.per-file-ignores]
# see https://github.com/charliermarsh/ruff
"tests/*" = ["FBT003", "INP001", "PLR2004", "S101", "SLF001"]

[tool.ruff.pydocstyle]
convention = "pep257"  # Accepts: "google", "numpy", or "pep257".
